--- a/application/views/profile.html
+++ b/application/views/profile.html
@@ -90,7 +90,7 @@
 					</div>
 					<div class="row profilecontent">
 						<div class="col-md-3" align="right">
-							<label class="control-label">Surname:</label>								
+							<label class="control-label">Lastname:</label>								
 						</div>
 						<div class="col-md-9">
 							<p><?php echo $member->Lastname; ?></p>
