--- a/application/views/add_product.html
+++ b/application/views/add_product.html
@@ -66,7 +66,7 @@
            <li><a href="#">WATCH LIST</a></li>
            <li><a href="#">ORDER</a></li>
            <li><a href="#">MSG BOX</a></li>
-           <li class="active"><a href="#">HISTORY</a></li>
+           <li><a href="#">HISTORY</a></li>
            <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
             <li><a href="index.html">SIGN OUT</a></li>
             <li><a href="#">| Pookpik |</a></li>
