--- a/application/views/editProfileForm.html
+++ b/application/views/editProfileForm.html
@@ -98,7 +98,7 @@
 						
 						</div>
 						<div class="col-md-9">
-							<button type="button" class="btn btn-default" >Cancel</button>
+							<a href="member_c/memberDetail"><button type="button" class="btn btn-default" >Cancel</button></a>
 							<button type="submit" class="btn btn-info" >Save</button>
 						</div>
 					</div>
