--- a/application/views/activationConfirmed.html
+++ b/application/views/activationConfirmed.html
@@ -50,8 +50,8 @@
 					</legend>
 				</div>
 				
-				<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;height:100px" align="center">
-					<h3>Your account has been activated. Press <a href="home_c/login">[here]</a> to login.</h3>
+				<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;height:100px;margin-bottom:45px" align="center">
+					<h3>Your account has been activated. Press <a href=<?php echo site_url("home_c/login"); ?>>[here]</a> to login.</h3>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
