--- a/application/views/messageBox.html
+++ b/application/views/messageBox.html
@@ -46,7 +46,7 @@
             </div><!-- row -->
           </div><!-- container -->
         </div>
-        <div class="container border-radius" style="background-color:white">
+        <div class="container border-radius" style="background-color:white;margin-bottom:40px">
           <!-- header message table -->
           <div class="row centered">
             <div class="col-sm-1 op">
