--- a/application/views/profile.html
+++ b/application/views/profile.html
@@ -79,7 +79,7 @@
 						</div>
 					</div><!-- row -->
 				</div>
-				<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
+				<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;margin-bottom:40px">
 					<div class="row profilecontent">
 						<div class="col-md-3" align="right">
 							<label class="control-label">Firstname:</label>								
