--- a/application/views/newMessage.html
+++ b/application/views/newMessage.html
@@ -19,18 +19,18 @@
 
       <!-- Fixed navbar -->
   <?php
-      // if($type==0){
-      //   include 'guest_menu.html';
-      // }
-      // else if($type==1){
-      //   include 'admin_menu.html';  
-      // }            
-      // else if($type==2){
-      //   include 'buyer_menu.html';  
-      // }
-      // else if($type==3){
-      //   include 'seller_menu.html'; 
-      // }
+      if($type==0){
+        include 'guest_menu.html';
+      }
+      else if($type==1){
+        include 'admin_menu.html';  
+      }            
+      else if($type==2){
+        include 'buyer_menu.html';  
+      }
+      else if($type==3){
+        include 'seller_menu.html'; 
+      }
     ?>
 
       <!-- msg part-->
