--- a/application/views/messageBox.html
+++ b/application/views/messageBox.html
@@ -45,7 +45,7 @@
                 <legend><h1>Message Box</h1></legend>
               </div>
               <div class="row" style="margin-top:20px">
-                <a href=<?php site_url("message_c/sendMessage"); ?>><button type="button" class="btn btn-default" style="margin-top:-30px;margin-bottom:20px">NEW Message</button></a>
+                <a href=<?php echo site_url("message_c/sendMessage"); ?>><button type="button" class="btn btn-default" style="margin-top:-30px;margin-bottom:20px">NEW Message</button></a>
               </div>
             </div><!-- row -->
           </div><!-- container -->
