--- a/application/views/buyer_home.html
+++ b/application/views/buyer_home.html
@@ -24,7 +24,7 @@
       <div class="row centered">
         <div class="col-lg-8 col-lg-offset-2">
         <h1>- Customer -</h1>
-        <h3><a href="home_c/product_c" class=""><b>> Product <</b></a></h3>
+        <h3><a href="product_c" class=""><b>> Product <</b></a></h3>
         <h3><a href="home_c/cart" class=""><b>> My Cart <</b></a></h3>
         <h3><a href="home_c/watchlist" class=""><b>> Watch List <</b></a></h3>
         <h3><a href="home_c/message" class=""><b>> Messages Box <</b></a></h3>
