--- a/application/views/replyMessage.html
+++ b/application/views/replyMessage.html
@@ -15,18 +15,18 @@
 
       <!-- Fixed navbar -->
   <?php
-      // if($type==0){
-      //   include 'guest_menu.html';
-      // }
-      // else if($type==1){
-      //   include 'admin_menu.html';  
-      // }            
-      // else if($type==2){
-      //   include 'buyer_menu.html';  
-      // }
-      // else if($type==3){
-      //   include 'seller_menu.html'; 
-      // }
+      if($type==0){
+        include 'guest_menu.html';
+      }
+      else if($type==1){
+        include 'admin_menu.html';  
+      }            
+      else if($type==2){
+        include 'buyer_menu.html';  
+      }
+      else if($type==3){
+        include 'seller_menu.html'; 
+      }
     ?>
 
 
@@ -44,27 +44,22 @@
             
 
             <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
-              <form class="form-horizontal" id="message-form" name="message-form" onsubmit="return validateForm()">
-
+            <?php echo form_open('message_c/reply','class="form-horizontal" id="message-form" name="message-form" onsubmit="return validateForm()'); ?>
                 <div class="row centered" style="margin-right:20px">
                   <fieldset>
                     <h3>Reply Messege</h3>
-                    <?php
-                        // foreach ($message->result() as $msg){
-                        //   $replyto = $msg->Sender_Name; // the person name whom user send msg to
-                        // }
-                      ?>
+
                     <div align="center">
                       <div class="form-group">
                         <label for="inputEmail" class="col-lg-2 control-label">Reply to :</label>
                         <div class="col-lg-10">
-                          <input type="text" class="form-control" id="msgReceiver" value="ReceiverName" disabled>
+                          <input type="text" class="form-control" id="msgReceiver" value=<? echo $receiverName; ?> disabled>
                         </div>
                       </div>
                       <div class="form-group">
                         <label for="inputTopic" class="col-lg-2 control-label">Subject :</label>
                         <div class="col-lg-10">
-                          <input type="text" class="form-control" id="msgSubject" value="Re: Subject">
+                          <input type="text" class="form-control" id="msgSubject" value=<? echo 'Re: '.$subject; ?> disabled>
                         </div>
                       </div>
                       <div class="form-group">
@@ -81,8 +76,8 @@
                   <div class="col-lg-2">
                   </div>
                   <div class="col-lg-10">
-                    <a href="<?php echo site_url('message_c/sendMessage') ?>"><button type="submit" class="btn btn-warning">Reply</button></a>
-                    <a href="<?php echo site_url('message_c/manageMessageBox') ?>"><button type="button" class="btn btn-default" >Cancel</button></a>
+                    <a href=<?php echo site_url('message_c/sendMessage') ?>><button type="submit" class="btn btn-warning">Reply</button></a>
+                    <a href=<?php echo site_url('message_c/manageMessageBox') ?>><button type="button" class="btn btn-default" >Cancel</button></a>
                   </div>
                 </div>
               </form>
@@ -103,21 +98,11 @@
   <script src=<?php echo base_url("assets/js/validation_function.js");?> ></script>
   <script>
     function validateForm() {
-      var receiver = document.forms["message-form"]["msgReceiver"].value;
-      var subject = document.forms["message-form"]["msgSubject"].value;
       var text = document.forms["message-form"]["msgText"].value;
 
       var message ="";
 
-      if (!validateReceiverName(receiver) ) {
-        alert("Receiver name is invalid.");
-        return false;
-      }
-      if (!validateSubject(subject) ) {
-        alert("The subject is invalid.");
-        return false;
-      }
-      if (!validateMessageText(text) ) {
+      if (!validateMessageText(text)||text==''||text==null) {
         alert("Text is invalid.");
         return false;
       }
