--- a/application/views/report.html
+++ b/application/views/report.html
@@ -10,13 +10,13 @@
 
     <title>DUMBOBAY - shopping area</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/dumbobaycss.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+     <!-- Bootstrap core CSS -->
+    <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -139,24 +139,21 @@
                 <th>Sale method</th>
                 <th>Sell amount</th>
               </tr>
-              <tr>
-                <td>1</td>
-                <td>iPhone6</td>
-                <td>Direct</td>
-                <td>2,000</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>iPhone6 plus</td>
-                <td>bidding</td>
-                <td>1,000</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>iPhone5S</td>
-                <td>Direct</td>
-                <td>200</td>
-              </tr>
+              <?php
+                $i=1;
+                foreach($products->result() as $row){
+                  if($row->type ==1){
+                    $type = "Direct";
+                  }else $type = "Bidding";
+                  echo "<tr>";
+                    echo "<td>$i</td>";
+                    echo "<td>$row->name</td>";
+                    echo "<td>$type</td>";
+                    echo  "<td>$row->SumQuantity</td>";
+                  echo "</tr>";
+                  $i=$i+1;
+                }
+              ?>
             </table>
             <table id="table1" style="width:100%;">
               <tr>
@@ -168,24 +165,21 @@
                 <th>Sale method</th>
                 <th>Sell amount</th>
               </tr>
-              <tr>
-                <td>1</td>
-                <td>iPhone6</td>
-                <td>Direct</td>
-                <td>2,000</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>iPhone6 plus</td>
-                <td>bidding</td>
-                <td>1,000</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>iPhone5S</td>
-                <td>Direct</td>
-                <td>200</td>
-              </tr>
+              <?php
+                $i=1;
+                foreach($products->result() as $row){
+                  if($row->type ==1){
+                    $type = "Direct";
+                  }else $type = "Bidding";
+                  echo "<tr>";
+                    echo "<td>$i</td>";
+                    echo "<td>$row->name</td>";
+                    echo "<td>$type</td>";
+                    echo  "<td>$row->SumQuantity</td>";
+                  echo "</tr>";
+                  $i=$i+1;
+                }
+              ?>
             </table>
             <table id="table2" style="width:100%;">
               <tr>
@@ -194,48 +188,50 @@
               <tr>
                 <th>Rank</th>
                 <th>Seller name</th>
-                <th>Duration</th>
-                <th>Sale volume</th>
+                <!-- <th>Duration</th> -->
+                <th>Total Money</th>
               </tr>
-              <tr>
-                <td>1</td>
-                <td>Steve1234</td>
-                <td>3 month</td>
-                <td>2,000,000 bath</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>tim777</td>
-                <td>3 month</td>
-                <td>10,000 bath</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>bill849</td>
-                <td>3 month</td>
-                <td>1,000 bath</td>
+              <?php
+                $i=1;
+                foreach($sellers->result() as $row){
+                  echo "<tr>";
+                    echo "<td>$i</td>";
+                    echo "<td>$row->username</td>";
+                    echo  "<td>$row->SumPrice</td>";
+                  echo "</tr>";
+                  $i=$i+1;
+                }
+              ?>
               </tr>
             </table>
             <table id="table3" style="width:100%;">
               <tr>
-                <th colspan="2"><h3><b>Blacklist</b></h3></th>
+                <th colspan="3"><h3><b>Blacklist</b></h3></th>
               </tr>
               <tr>
-                <th>User</th>
-                <th>Blacklist-added date</th>
+                <th>User ID</th>
+                <th>Username</th>
+                <th>Email</th>
               </tr>
-              <tr>
-                <td>SteveB324</td>
-                <td>21 Dec 2014</td>
-              </tr>
-              <tr>
+              <?php
+                $i=1;
+                foreach($blacklistUsers->result() as $row){
+                  echo "<tr>";
+                    echo "<td>$row->User_ID</td>";
+                    echo  "<td>$row->Username</td>";
+                     echo  "<td>$row->Email</td>";
+                  echo "</tr>";
+                  $i=$i+1;
+                }
+              ?>
+             <!--  <tr>
                 <td>JohnS345</td>
                 <td>31 Dec 2014</td>
               </tr>
               <tr>
                 <td>Alex38595</td>
                 <td>2 Jan 2015</td>
-              </tr>
+              </tr> -->
             </table>
           </div>
 
