--- a/application/views/report.html
+++ b/application/views/report.html
@@ -71,7 +71,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
+          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src=<?php echo base_url("/assets/img/dumbobay-logo-sm.png");?> rel="stylesheet"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -106,7 +106,7 @@
           <div class="col-md-10 col-md-offset-1" style="padding-top:50px; padding-bottom:25px">
             <div class="row">
               <div class="col-md-1" style="padding-left:20px">
-                <img src="assets/img/report.png" width="100" height="110">
+                <img src=<?php echo base_url("/assets/img/report.png"); ?> width="100" height="110">
               </div>
               <div class="col-md-8" style="padding-left:50px">
                 <h1 style="color:black;padding-top:30px;padding-left:0px">Report</h1>
@@ -250,10 +250,10 @@
       <div class="container">
         <div class="row">
         <div class="col-md-6 col-md-push-2">
-          <img src="assets/img/DumboBay-Logo-b.png">
+          <img src=<?php echo base_url("/assets/img/DumboBay-Logo-b.png");?> >
         </div>
         <div class="col-md-6 col-md-push-2">
-          <img src="assets/img/Frappe-Logo-bg-sm.png">
+          <img src=<?php echo base_url("/assets/img/Frappe-Logo-bg-sm.png");?> rel="stylesheet">>
         </div>
         </div><!-- row -->
       </div><!-- container -->
