--- a/application/views/replyMessage.html
+++ b/application/views/replyMessage.html
@@ -49,7 +49,7 @@
             
 
             <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
-            <?php echo form_open('message_c/reply/11','class="form-horizontal" id="message-form" name="message-form" onsubmit="return validateForm()"'); ?>
+            <?php echo form_open('message_c/reply/'.$message_id,'class="form-horizontal" id="message-form" name="message-form" onsubmit="return validateForm()"'); ?>
             
                 <div class="row centered" style="margin-right:20px">
                   <fieldset>
@@ -64,7 +64,7 @@
                       <div class="form-group">
                         <label for="inputTopic" class="col-lg-2 control-label">Subject :</label>
                         <div class="col-lg-10">
-                          <input type="text" class="form-control" id="msgSubject" name="msgSubject" value=<? echo '"Re: '.$subject.'"'; ?> disabled>
+                          <input type="text" class="form-control" id="msgSubject" name="msgSubject" value=<? echo $subject; ?> disabled>
                         </div>
                       </div>
                       <div class="form-group">
