--- a/application/views/replyMessage.html
+++ b/application/views/replyMessage.html
@@ -47,9 +47,8 @@
               </div><!-- row -->
             </div><!-- container -->
             
-
             <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
-            <?php echo form_open('message_c/reply/11','class="form-horizontal" id="message-form" name="message-form" onsubmit="return validateForm()"'); ?>
+            <?php echo form_open('message_c/reply/'.$message_id,'class="form-horizontal" id="message-form" name="message-form" onsubmit="return validateForm()"'); ?>
             
                 <div class="row centered" style="margin-right:20px">
                   <fieldset>
