--- a/application/views/report.html
+++ b/application/views/report.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>DUMBOBAY - shopping area</title>
-
-     <!-- Bootstrap core CSS -->
-    <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
-    <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
-    <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
+      <?php
+    include 'HTMLHeader.html';
+  ?>
 
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -63,7 +50,21 @@
 
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <?php
+      if($type==0){
+        include 'guest_menu.html';
+      }
+      else if($type==1){
+        include 'admin_menu.html';  
+      }            
+      else if($type==2){
+        include 'buyer_menu.html';  
+      }
+      else if($type==3){
+        include 'seller_menu.html'; 
+      }
+    ?>
+   <!--  <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -71,7 +72,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src=<?php echo base_url("/assets/img/dumbobay-logo-sm.png");?> rel="stylesheet"></a>
+          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src=<?php
+          // echo base_url("/assets/img/dumbobay-logo-sm.png");
+          ?> rel="stylesheet"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -83,13 +86,12 @@
            <li><a href="#">ORDER</a></li>
            <li><a href="#">MSG BOX</a></li>
            <li><a href="#">HISTORY</a></li>
-           <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
             <li><a href="index.html">SIGN OUT</a></li>
             <li><a href="#">| Pookpik |</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
-    </div>
+    </div> -->
 
     <div id="myheaderwrap">
       <div class="container">
