--- a/application/views/buyer_menu.html
+++ b/application/views/buyer_menu.html
@@ -17,6 +17,7 @@
             <li><a href=<?php echo site_url("home_c/watchlist");?>>WATCH LIST</a></li>
             <li><a href=<?php echo site_url("home_c/message");?>>MSG BOX</a></li>
             <li><a href=<?php echo site_url("home_c/history");?>>HISTORY</a></li>
+            <li><a href=<?php echo site_url("problem_c");?>>REPORT</a></li>
             <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
             <li><a href=<?php echo site_url("home_c/logout");?>>SIGN OUT</a></li>
             <li><a href=<?php echo site_url("member_c/memberDetail");?>>| <?php echo " ".$username." ";?> |</a></li>
