--- a/application/views/report.html
+++ b/application/views/report.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>DUMBOBAY - shopping area</title>
-
-     <!-- Bootstrap core CSS -->
-    <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
-    <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
-    <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
-
-
+    <?php
+    include 'HTMLHeader.html';
+  ?>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
