--- a/application/views/problemForm.html
+++ b/application/views/problemForm.html
@@ -1,22 +1,9 @@
 <!doctype html>
 <htlm lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>DUMBOBAY - shopping area</title>
-
-    <!-- Bootstrap core CSS -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
-  <link href="assets/css/dumbobaycss.css" rel="stylesheet">
-  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="assets/css/main.css" rel="stylesheet">
+    <?php
+    include 'HTMLHeader.html';
+  ?>
 
    
 
@@ -30,33 +17,26 @@
 
     <body>
 
-      <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
-          </div>
-          <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-
-              <li><a href="#">HOME</a></li>
-              <li><a href="#">PRODUCT</a></li>
-              <li><a href="#">MY CART</a></li>
-              <li ><a href="#">WATCH LIST</a></li>
-              <li><a href="#">ORDER</a></li>
-              <li><a href="#">MSG BOX</a></li>
-              <li><a href="#">HISTORY</a></li>
-              <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
-              <li><a href="index.html">SIGN OUT</a></li>
-              <li><a href="#">| Pookpik |</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
+      <!-- Fixed navbar -->
+  <?php
+      if($type==0){
+        include 'guest_menu.html';
+      }
+      else if($type==1){
+        include 'admin_menu.html';  
+      }            
+      else if($type==2){
+        include 'buyer_menu.html';  
+      }
+      else if($type==3){
+        include 'seller_menu.html'; 
+      }
+      if($this->session->flashdata('message')) echo '
+    <script>
+      alert("'.$this->session->flashdata('message').'");
+    </script>
+    ';
+    ?>
 
       <!-- msg part-->
       <div>
@@ -69,11 +49,6 @@
                 </div>
               </div><!-- row -->
             </div><!-- container -->
-            <!--<?php
-            if(this->session->flashdata('message')){
-              //show a pop-up displaying 'Your message has been sent.'
-            }
-            ?>-->
 
             <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
               <form class="form-horizontal">
