--- a/application/views/signin.html
+++ b/application/views/signin.html
@@ -27,6 +27,11 @@
 	<!-- Fixed navbar -->
 	<?php
 		include 'guest_menu.html';
+		if($this->session->flashdata('message')) echo '
+		<script>
+			alert("'.$this->session->flashdata('message').'");
+		</script>
+		';
 	?>
 	<!-- =======================================================================-->
 	<div id="myheaderwrap">
