--- a/application/views/buyer_home.html
+++ b/application/views/buyer_home.html
@@ -18,6 +18,11 @@
           <?php
             //echo $username;
             include 'buyer_menu.html';
+            if($this->session->flashdata('message')) echo '
+            <script>
+              alert("'.$this->session->flashdata('message').'");
+            </script>
+            ';
           ?>
   <div id="myheaderwrap">
     <div class="container">
