--- a/application/views/buyer_home.html
+++ b/application/views/buyer_home.html
@@ -25,9 +25,9 @@
             ';
           ?>
   <div id="myheaderwrap">
-    <div class="container">
+    <div class="container" >
       <div class="row centered">
-        <div class="col-lg-8 col-lg-offset-2">
+        <div class="col-lg-8 col-lg-offset-2" style="height:100%">
         <h1>- Customer -</h1>
         <h3><a href="product_c" class=""><b>> Product <</b></a></h3>
         <h3><a href="home_c/cart" class=""><b>> My Cart <</b></a></h3>
